--- a/Labs/Lab 6/index.html
+++ b/Labs/Lab 6/index.html
@@ -15,6 +15,9 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>
             $(document).ready(function() {
+
+
+
                 var bodyStyles = {"margin": 0, "padding": 0, "min-height": "100vh", "font-family": "Roboto Condensed', sans-serif"};
                 $("body").css(bodyStyles);
                 var main = $("<main>");
@@ -27,7 +30,7 @@
                 // top nav
                 var ul = $("<ul>");
                 ul.css({"display": "flex","justify-content": "space-between", "list-style": "none", "font-size": "50px"});
-                var burgerMenu = $("<div>").addClass("container");
+                var burgerMenu = $("<div>").attr("id", "menu");
                 burgerMenu.css({"display": "inline-block", "cursor": "pointer"});
                 var burgerBar1 = $("<div>").addClass("bar1");
                 var burgerBar2 = $("<div>").addClass("bar2");
@@ -36,12 +39,20 @@
                 burgerBar2.css({"width": "35px", "height": "5px", "background-color": "white", "margin": "6px 0"});
                 burgerBar3.css({"width": "35px", "height": "5px", "background-color": "white", "margin": "6px 0"});
                 burgerMenu.append(burgerBar1, burgerBar2, burgerBar3);
-                var li1 = $("<li>").append(burgerMenu);
+                var li1 = $("<li>").append("<a href=\"#\">Logo</a>");
                 var li2 = $("<li>").append("<a href=\"#\">Top Gyms</a>");
-                var li3 = $("<li>").append("<a href=\"#\">Logo</a>");
+                var li3 = $("<li>").append(burgerMenu);
                 ul.append(li1, li2, li3);
 
                 //Hamburger Nav
+                var hiddenMenu = $("<div>")
+                hiddenMenu.attr("id", "burgers")
+                hiddenMenu.css({"position": "absolute", "left": "-500px", "font-size": "5.5vw", "width": "500px", "height": "100%", "background-color": "white"})
+                var hiddenUl = $("<ul>");
+                var hiddenLi1 = $("<li>Home</li>");
+                var hiddenLi2 = $("<li>About</li>");
+                var hiddenLi3 = $("<li>Contact</li>");
+                hiddenMenu.append(hiddenUl.append(hiddenLi1, hiddenLi2, hiddenLi3));
                 
 
                 //Name of gyms section
@@ -112,9 +123,23 @@
 
 
                 section.append(ul2, reviews);
-                main.append(header, section);
+                main.append(hiddenMenu, header, section);
                 $("body").append(main);
                 $("a").css({"text-decoration": "none", "color": "white"});
+
+                var menuAnimationSlideIn = {"left": "0px", "easing": "swing"};
+                var menuAnimationSlideOut = {"left": "-500px", "easing": "swing"};
+                var show = false;
+
+                $("#menu").click(function(event) {
+                    if(!show) {
+                        show = true;
+                        $("#burgers").animate(menuAnimationSlideIn, 300);
+                    } else {
+                        show = false;
+                        $("#burgers").animate(menuAnimationSlideOut, 500);
+                    }
+                });  
             });
 
         </script>
