--- a/Labs/Lab 6/index.html
+++ b/Labs/Lab 6/index.html
@@ -14,7 +14,7 @@
             $(document).ready(function() {
                 var bodyGrad = $("<div>");
                 bodyGrad.attr("id", "hide");
-                bodyGrad.css({"display": "none", "position": "fixed", "width": "100%", "height": "100%", "z-index": "1", "background-image": "linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4))"});
+                bodyGrad.css({"display": "none", "position": "fixed", "width": "100%", "height": "100%", "z-index": "-1", "background-image": "linear-gradient(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.15))"});
 
 
                 var bodyStyles = {"margin": 0, "padding": 0, "min-height": "100vh", "font-family": "Nunito, sans-serif"};
@@ -31,7 +31,7 @@
                 var ul = $("<ul>");
                 ul.css({"display": "flex","justify-content": "space-around", "padding": "5px", "width": "100%", "list-style": "none", "font-size": "50px", "text-align": "center", "align-items": "center", "z-index": "2"});
                 var burgerMenu = $("<div>").attr("id", "menu");
-                burgerMenu.css({"display": "inline-block", "cursor": "pointer", "z-index": "2"});
+                burgerMenu.css({"display": "inline-block", "cursor": "pointer", "z-index": "1"});
                 var burgerBar1 = $("<div>").addClass("bar1");
                 var burgerBar2 = $("<div>").addClass("bar2");
                 var burgerBar3 = $("<div>").addClass("bar3");
@@ -103,7 +103,7 @@
                 li8.css({"margin-left": "auto", "color": "#C0C0C0"});
                 ul3.append(li6, li7, li8);
                 img1.attr('src', 'pic2.jpg');
-                img1.css({"width": "auto", "height": "85px", "border-radius": "100%"});
+                img1.css({"width": "auto", "height": "85px", "border-radius": "50%"});
                 content1.append("<span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>");
                 content1.append("<p>\"Questions about whether design is\nnecessary or affordable are quite besides\nthis point: design is inevitable.\"").css({"font-weight": "700"});;
                 content1.append(ul3);
@@ -125,8 +125,8 @@
                 li11.css({"color": "#C0C0C0"})
                 li11.css({"margin-left": "auto"});
                 ul4.append(li9, li10, li11);
-                img2.attr('src', 'pic1.jpg');
-                img2.css({"width": "auto", "height": "85px", "border-radius": "50%"})
+                img2.attr('src', 'pic3.jpg');
+                img2.css({"width": "auto", "height": "85px", "border-radius": "50%"});
                 content2.append("<span>★</span><span>★</span><span>★</span><span>★</span><span>☆</span>");
                 content2.append("<p>\"Design is the application of intent - the opposite of happenstance and an antidote to accident.\"").css({"font-weight": "700"});
                 content2.append(ul4);
@@ -141,9 +141,9 @@
                 $("a").css({"text-decoration": "none", "color": "white"});
 
                 var menuAnimationSlideIn = {"left": "0px", "easing": "swing"};
-                var bodyAnimationSlideIn = {"display": "block", "easing": "swing"};
+
                 var menuAnimationSlideOut = {"left": "-500px", "easing": "swing"};
-                var bodyAnimationSlideOut = {"display": "none", "easing": "swing"};
+
                 
                 var show = false;
 
@@ -151,17 +151,15 @@
                     if(!show) {
                         show = true;
                         $("#burgers").animate(menuAnimationSlideIn, 300);
-                        $("#hide").css({
-                        "opacity":"1",
-                        "display":"block",
-                        }).show().animate({"display":"block", "opacity": "1", "easing": "swing"}, 300)
+                        // $("#hide").show().animate({"opacity": "1", "easing": "linear"}, 2000)
+                        $("#hide").show(50);
+                        $("#hide").fadeIn({"easing": "linear"});
                     } else {
                         show = false;
                         $("#burgers").animate(menuAnimationSlideOut, 500);
-                        $("#hide").css({
-                        "opacity":"0",
-                        "display":"none",
-                        }).show().animate({"display":"none", "opacity": "0", "easing": "swing"}, 500)
+                        // $("#hide").hide().animate({"opacity": "0", "easing": "linear"}, 2500)
+                        $("#hide").hide(50);
+                        $("#hide").fadeOut({"easing": "linear"});
                     }
                 });  
             });
