--- a/Labs/Lab 6/index.html
+++ b/Labs/Lab 6/index.html
@@ -68,7 +68,7 @@
                 var locationDiv = $("<div>");
                 locationDiv.css({"display": "flex", "justify-content": "space-evenly", "align-items": "center"})
                 var locIcon = $("<i class=\"material-icons\">my_location</i>");
-                locIcon.css({"display": "block", "color": "white", "font-size": "4.5vw", "margin-right": "5px"})
+                locIcon.css({"display": "block", "color": "white", "font-size": "4.5vw", "margin-right": "50px"})
                 var location = $("<p>New York, NY</p>");
                 locationDiv.append(locIcon, location);
                 location.css({"color": "white"})
@@ -83,7 +83,7 @@
                 ul2.css({"display": "flex","list-style": "none", "font-size": "50px", "justify-content": "space-around"});
                 var li4 = $('<li>Facilities</li>');
                 li4.css({"color": "#e3e3e3", "padding": '10px'});
-                var li5 = $('<li>Review</li>');
+                var li5 = $('<li>Reviews</li>');
                 li5.css({"border-bottom": "5px solid red"})
                 ul2.append(li4, li5);
                 
