--- a/node-connectivity/static/html/lab_08_starter.html
+++ b/node-connectivity/static/html/lab_08_starter.html
@@ -28,9 +28,13 @@
     <div id="getHTML">
       <a href='#'>Click here to get the data as HTML.</a>
     </div>
-    <div id="jsonTable"></div>
+    <div id="jsonTable">
 
-    <div id="htmlTable"></div>
+    </div>
+
+    <div id="htmlTable">
+      
+    </div>
 
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
